@@ -9,8 +9,10 @@ hockeypuck (0.8.2~a1) precise; urgency=low
     - Split UID keywords into letter/digit tokens for search.
       LP: #1108416
     - Using $all on search terms in mongo query.
+  * scripts/fix-keywords.js:
+    - Add script to repair uid keywords in existing Hockeypuck.
 
- -- Casey Marshall <casey.marshall@gmail.com>  Sat, 09 Feb 2013 00:11:05 -0600
+ -- Casey Marshall <casey.marshall@gmail.com>  Sat, 09 Feb 2013 22:22:30 -0600
 
 hockeypuck (0.8.1) precise; urgency=low
 
